5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1638_2730.log
== SUBMITION (2019-04-16 10:42:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1= float(input("qual seu numero 1?"))
x2= float(input("qual seu numero 2? "))
if (x1<0 or x2<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- EXECUTION TIME:
0.207686
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1= float(input("qual seu numero 1?"))
x2= float(input("qual seu numero 2? "))
if (x1<0 or x2<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1= float(input("qual seu numero 1?"))
x2= float(input("qual seu numero 2? "))
if (x1<0 or x2<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual seu numero x?"))
y= float(input("qual seu numero y? "))
if (x1<0 or x2<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (x1<0 or x2<0):
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual seu numero x?"))
y= float(input("qual seu numero y? "))
if (y<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual seu numero x?"))
y= float(input("qual seu numero y? "))
if (y<0):
	print ("Inferiores")
else: 
	print("Superiores")
-- EXECUTION TIME:
0.142346
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
